--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,18 @@ typings/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# built component library
+/lib
+
+#build docs
+/docs
+
+# Generated component data
+/config/componentData.js
+
+# VSCode launch configuration
+launch.json
+
+# Webstorm
+.idea
