--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dev-utils": "^7.0.1",
     "react-docgen": "^2.21.0",
     "react-dom": "^16.7.0",
+    "react-test-renderer": "^16.7.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
